--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-pageflip": "^2.0.3",
-    "react-pdf": "^9.2.1"
+    "react-pdf": "^9.2.1",
+    "react-pro-sidebar": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
